fixed z-index of mw-panel

--- a/components/navigation.less
+++ b/components/navigation.less
@@ -84,6 +84,7 @@ div#mw-panel {
 	padding-top: 1em;
 	width: 10em;
 	left: 0;
+	z-index: 0;
 
 	div.portal {
 		margin: 0 0.6em 0 0.7em;
